updates for the new API endpoint